--- a/LiveTV/Classes/Home/View/HomeViewCell.xib
+++ b/LiveTV/Classes/Home/View/HomeViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HomeViewCell" customModule="LiveTV" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="homeViewCell" id="gTV-IL-0wX" customClass="HomeViewCell" customModule="LiveTV" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="212" height="256"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -32,14 +32,14 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_icon_live" translatesAutoresizingMaskIntoConstraints="NO" id="Zjk-Rh-ODC">
                         <rect key="frame" x="181" y="8" width="23" height="13"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="三眼女神实施休息" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytw-ON-irX">
-                        <rect key="frame" x="8" y="233.5" width="98.5" height="14.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天王盖地虎" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytw-ON-irX">
+                        <rect key="frame" x="8" y="233.5" width="61.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wQ4-Iv-0gi">
-                        <rect key="frame" x="111.5" y="235" width="45" height="12"/>
+                        <rect key="frame" x="74.5" y="235" width="45" height="12"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="45" id="fhU-o5-DY0"/>
@@ -71,7 +71,7 @@
                 <outlet property="nickNameLabel" destination="Ytw-ON-irX" id="CqJ-uX-iOV"/>
                 <outlet property="onlinePeopleCount" destination="wQ4-Iv-0gi" id="bpt-PC-b6e"/>
             </connections>
-            <point key="canvasLocation" x="-35" y="-319"/>
+            <point key="canvasLocation" x="-122" y="-326"/>
         </collectionViewCell>
     </objects>
     <resources>
