--- a/LiveTV/Classes/Live/Controller/RoomViewController.xib
+++ b/LiveTV/Classes/Live/Controller/RoomViewController.xib
@@ -13,6 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RoomViewController" customModule="LiveTV" customModuleProvider="target">
             <connections>
+                <outlet property="bgImageView" destination="r9x-RU-bnE" id="LrA-Cr-sgH"/>
                 <outlet property="iconImageView" destination="T72-vD-R6G" id="b6k-YS-lYo"/>
                 <outlet property="nickNameLabel" destination="A0P-TL-VEm" id="PmC-bZ-cmS"/>
                 <outlet property="onlineLabel" destination="hEJ-JT-mTA" id="aWR-G8-dVz"/>
@@ -30,7 +31,7 @@
                     <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OIR-mC-6Ye">
-                    <rect key="frame" x="8" y="30" width="190" height="32"/>
+                    <rect key="frame" x="8" y="30" width="159" height="32"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T72-vD-R6G">
                             <rect key="frame" x="3" y="3" width="30" height="26"/>
@@ -57,7 +58,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cl8-5I-oFY">
-                            <rect key="frame" x="132" y="5" width="50" height="22"/>
+                            <rect key="frame" x="101" y="5" width="50" height="22"/>
                             <color key="backgroundColor" red="0.81176470590000005" green="0.58431372550000005" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="50" id="iFP-Ta-F3y"/>
@@ -77,12 +78,12 @@
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="0.5" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="Cl8-5I-oFY" firstAttribute="leading" secondItem="A0P-TL-VEm" secondAttribute="trailing" constant="15" id="2y8-sn-ujH"/>
                         <constraint firstItem="0Cr-iW-wcO" firstAttribute="bottom" secondItem="T72-vD-R6G" secondAttribute="bottom" id="3oI-1J-HAd"/>
                         <constraint firstItem="Cl8-5I-oFY" firstAttribute="top" secondItem="OIR-mC-6Ye" secondAttribute="top" constant="5" id="BUc-xK-0Je"/>
                         <constraint firstItem="0Cr-iW-wcO" firstAttribute="leading" secondItem="A0P-TL-VEm" secondAttribute="leading" id="HfN-Xm-Vo6"/>
                         <constraint firstAttribute="bottom" secondItem="T72-vD-R6G" secondAttribute="bottom" constant="3" id="JF6-Yy-jLu"/>
                         <constraint firstAttribute="height" constant="32" id="PlJ-qQ-crW"/>
-                        <constraint firstItem="Cl8-5I-oFY" firstAttribute="leading" secondItem="0Cr-iW-wcO" secondAttribute="trailing" constant="15" id="UMJ-aM-8uN"/>
                         <constraint firstItem="Cl8-5I-oFY" firstAttribute="centerY" secondItem="T72-vD-R6G" secondAttribute="centerY" id="VfJ-Xw-JOE"/>
                         <constraint firstAttribute="trailing" secondItem="Cl8-5I-oFY" secondAttribute="trailing" constant="8" id="Y6b-ds-YIe"/>
                         <constraint firstItem="T72-vD-R6G" firstAttribute="leading" secondItem="OIR-mC-6Ye" secondAttribute="leading" constant="3" id="aio-RS-aQv"/>
